--- a/style.css
+++ b/style.css
@@ -13,3 +13,8 @@ body {
     background-color: red;
     display: none;
 }
+.box1 {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+}
